fix the overflow issue

--- a/src/pages/correlation/correlation-page.module.scss
+++ b/src/pages/correlation/correlation-page.module.scss
@@ -1,6 +1,7 @@
 .mainView {
   padding: 25px;
   width: 100%;
+  overflow: auto;
 }
 
 .infoSection {
